--- a/maravelo-landingpage/maravelo-student-ebike.html
+++ b/maravelo-landingpage/maravelo-student-ebike.html
@@ -90,8 +90,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-xl-3 col-md-4 col-8 mb-md-3 mb-4">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-md-4 col-8 mb-md-3 mb-4">
                         <div id="iphone">
                             <img src="img/iphonemockup.png" alt="Instagram mockup billede">
                         </div>
@@ -201,8 +201,8 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-lg-10">
                         <h1>Sådan fungerer det</h1>
-                        <a href="img/process.png" target="_blank">
-                            <img src="img/process.png" alt="Billede med købsprocessen hos Maravelo">
+                        <a href="img/process.jpg" target="_blank">
+                            <img src="img/process.jpg" alt="Billede med købsprocessen hos Maravelo">
                         </a>
                     </div>
                 </div>
@@ -224,12 +224,8 @@
                 </div>
                 <div class="col-xl-7 col-lg-6">
                     <div id="stemning">
-                        <img src="img/stemning1.jpeg" alt="Billede af to unge med hver deres Maravelo el-cykler"
-                            id="stemning1" class="float-end">
-                        <img src="img/stemning2.jpeg" alt="Billede af rød Maravelo el-cykel" id="stemning2"
-                            class="float-start">
+                        <img src="img/stemning.png" alt="Billede af to unge med hver deres Maravelo el-cykler og billede af rød Maravelo el-cykel">
                     </div>
-
                 </div>
             </div>
             <div class="row align-items-center justify-content-between">
@@ -261,7 +257,7 @@
 
     <div id="footer">
         <div class="container">
-            <div class="row align-items-center justify-content-between">
+            <div class="row align-items-center justify-content-between text-center">
                 <div class="col-md-6 text-md-start">
                     <div id="copy">
                         Copyright &copy; 2021
