second update upload

--- a/maravelo_banner_2/index.html
+++ b/maravelo_banner_2/index.html
@@ -2941,27 +2941,24 @@
 </head>
 
 <body>
-    <a href="https://maravelo.dk/shop">
-        <gwd-google-ad id="gwd-ad" polite-load="">
-            <gwd-pagedeck class="gwd-page-container" id="pagedeck">
-                <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox" data-gwd-width="300px"
-                    data-gwd-height="250px">
-                    <div class="gwd-page-content gwd-page-size">
-                        <gwd-image id="Italyflag" source="Italyflag.png" scaling="stretch" class="gwd-image-1vwj">
-                        </gwd-image>
-                        <gwd-image id="gwd-image_1" source="Maravelo-Pay-off-BLACK__1_.png" scaling="stretch"
-                            class="gwd-image-cett"></gwd-image>
-                        <gwd-image id="gwd-image_2" source="R_d-cykel-lille.png" scaling="stretch"
-                            class="gwd-image-18lv gwd-gen-1p01gwdanimation"></gwd-image><span
-                            class="gwd-span-chod">Student
-                            Ebike fra kun 499,-/md.</span>
-                        <div class="gwd-animation-event AnimationEnd-animation" data-event-name="AnimationEnd"
-                            data-event-time="3900"></div>
-                    </div>
-                </gwd-page>
-            </gwd-pagedeck>
-        </gwd-google-ad>
-    </a>
+    <gwd-google-ad id="gwd-ad" polite-load="">
+        <gwd-pagedeck class="gwd-page-container" id="pagedeck">
+            <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox" data-gwd-width="300px"
+                data-gwd-height="250px">
+                <div class="gwd-page-content gwd-page-size">
+                    <gwd-image id="Italyflag" source="Italyflag.png" scaling="stretch" class="gwd-image-1vwj">
+                    </gwd-image>
+                    <gwd-image id="gwd-image_1" source="Maravelo-Pay-off-BLACK__1_.png" scaling="stretch"
+                        class="gwd-image-cett"></gwd-image>
+                    <gwd-image id="gwd-image_2" source="R_d-cykel-lille.png" scaling="stretch"
+                        class="gwd-image-18lv gwd-gen-1p01gwdanimation"></gwd-image><span class="gwd-span-chod">Student
+                        Ebike fra kun 499,-/md.</span>
+                    <div class="gwd-animation-event AnimationEnd-animation" data-event-name="AnimationEnd"
+                        data-event-time="3900"></div>
+                </div>
+            </gwd-page>
+        </gwd-pagedeck>
+    </gwd-google-ad>
     <script type="text/javascript" id="gwd-init-code">
         (function () {
             var gwdAd = document.getElementById('gwd-ad');
