updates based on validation errors

--- a/maravelo-landingpage/maravelo-student-ebike.html
+++ b/maravelo-landingpage/maravelo-student-ebike.html
@@ -1,16 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description"
-        content="Maravelo el-cykler kan nu købes til fordelagtig studiepris - bestil i dag så du kan nyde friheden">
+    <meta name="description" content="Maravelo el-cykler kan nu købes til fordelagtig studiepris - bestil i dag så du kan nyde friheden">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/hmo5sob.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
@@ -18,15 +16,15 @@
     <title>Maravelo Student Ebike</title>
 </head>
 
-<!-- Body-tagget har fået en scrollspy som fortæller at brugerens position på siden skal registreres i det der har ID "navbar", som er nav tagget, altså vores menu -->
-
+<!-- Body-tagget har fået en scrollspy som fortæller at brugerens position på siden skal registreres i det tag der har ID "navbar", som er nav tagget, altså vores menu -->
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" tabindex="0">
     <!-- Menu -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light" id="navbar">
         <div class="container-md" id="menu">
-            <a class="navbar-brand" href="#hjem"><img src="img/logo/MV_logo_new_light_future.png" alt="Logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#hjem">
+                <img src="img/logo/MV_logo_new_light_future.png" alt="Logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -66,9 +64,11 @@
                         <p class="subtitle">kun kr. 499/md.</p>
                     </div>
                     <!-- Button sat udenfor "row"-div'en, for at bevare knappens størrelse -->
-                    <button type="button">
-                        <a href="https://maravelo.dk/shop">Bestil nu</a>
-                    </button>
+                    <a href="https://maravelo.dk/shop">
+                        <button type="button">
+                            Bestil nu
+                        </button>
+                    </a>
                 </div>
             </div>
 
@@ -77,24 +77,17 @@
                 <div class="row align-items-center justify-content-center">
                     <div class="col-lg-5 col-md-10 mb-lg-3 mb-4">
                         <div id="ride">
-                            <h2>Ride the future</h2>
-                            <p>Hos Maravelo kan du købe din <span class="bold">student e-Bike med leasingaftale</span>
-                                uden binding. Det er den perfekte cykel til dig, der er studerende, og som skal til og
-                                fra studie hver dag.</p>
-                            <p>Ved køb af en Maravelo køber du ikke kun en el-cykel – <span class="bold">du køber også
-                                    frihed</span>. Friheden til selv at styre, hvornår du tager afsted, og hvornår du
-                                tager hjem. Du er ikke afhængig af dine forældre eller af deres hverdagsrutiner, men i
-                                stedet er du <span class="bold">fleksibel</span> og herre over egen tid.</p>
-                            <p>Cykelturen er ikke længere en hård kamp, men en kort og nem tur fra sted til sted. Du
-                                kommer frem uden sved på panden for på din el-cykel fra Maravelo, er det hele <span
-                                    class="bold">som en leg.</span></p>
+                            <h3>Ride the future</h3>
+                            <p>Hos Maravelo kan du købe din <span class="bold">student e-Bike med leasingaftale</span> uden binding. Det er den perfekte cykel til dig, der er studerende, og som skal til og fra studie hver dag.</p>
+                            <p>Ved køb af en Maravelo køber du ikke kun en el-cykel – <span class="bold">du køber også frihed</span>. Friheden til selv at styre, hvornår du tager afsted, og hvornår du tager hjem. Du er ikke afhængig af dine forældre eller af deres hverdagsrutiner, men i stedet er du <span class="bold">fleksibel</span> og herre over egen tid.</p>
+                            <p>Cykelturen er ikke længere en hård kamp, men en kort og nem tur fra sted til sted. Du kommer frem uden sved på panden for på din el-cykel fra Maravelo, er det hele <span class="bold">som en leg.</span></p>
                             <p>Tag det første skridt mod selvstændighed og køb din Maravelo i dag!</p>
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-10">
                         <div id="video">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/Uh0SOzYpQIw"
-                                title="Maravelo kampagne-film" frameborder="0"
+                                title="Maravelo kampagne-film"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </div>
@@ -108,19 +101,16 @@
                     </div>
                     <div class="col-md-8">
                         <div id="insta">
-                            <h2>Instagram</h2>
-                            <p>Vi er helt vilde med at se jer med jeres Maravelo, så tag os endelig i jeres stories og
-                                posts, når I er ude at køre!</p>
-                            <p>Hvis I gerne vil features på vores Instagram-profil, så skal I blot tagge os og bruge
-                                hashtagget <span class="bold">#ridethefuture</span>, så deler vi jeres post.</p>
-                            <p>Vi opdaterer løbende siden med nye posts og stories med den <span class="bold">nyeste
-                                    info</span> om Maravelo, så følg os på Instagram for hele tiden at være opdateret.
+                            <h3>Instagram</h3>
+                            <p>Vi er helt vilde med at se jer med jeres Maravelo, så tag os endelig i jeres stories og posts, når I er ude at køre!</p>
+                            <p>Hvis I gerne vil features på vores Instagram-profil, så skal I blot tagge os og bruge hashtagget <span class="bold">#ridethefuture</span>, så deler vi jeres post.</p>
+                            <p>Vi opdaterer løbende siden med nye posts og stories med den <span class="bold">nyeste info</span> om Maravelo, så følg os på Instagram for hele tiden at være opdateret.
                             </p>
-                            <button type="button">
-                                <a href="https://www.instagram.com/maravelo.eu/">
+                            <a href="https://www.instagram.com/maravelo.eu/">
+                                <button type="button">
                                     <i class="fa fa-instagram"></i>Følg os
-                                </a>
-                            </button>
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +121,7 @@
             <div class="container">
                 <div class="row justify-content-center text-center">
                     <div class="col-lg-10">
-                        <h1>Sådan fungerer det</h1>
+                        <h2>Sådan fungerer det</h2>
                         <a href="img/process.jpg" target="_blank">
                             <img src="img/process.jpg" alt="Billede med købsprocessen hos Maravelo">
                         </a>
@@ -144,49 +134,35 @@
             <div class="container">
                 <div class="row justify-content-center text-center">
                     <div class="col-12">
-                        <h1>Det får du</h1>
+                        <h2>Det får du</h2>
                     </div>
                     <div class="row justify-content-evenly text-center mt-4">
                         <div class="col-xl-3 col-md-6 col-12 mb-4">
                             <div id="lås">
                                 <img src="img/ikoner/lock.png" alt="Ikon der illustrerer en hængelås" class="ikon">
-                                <h3>Pinkode</h3>
-                                <p>Din Maravelo har et fantastisk <span class="bold">sikkerhedssystem</span> med
-                                    pinkode. Når el-cyklen slukkes låser systemet i neutralt gear og cyklen bliver
-                                    dermed uanvendelig for andre end dens retmæssige ejer. <span class="bold">Nemt for
-                                        dig</span>, svært for tyven.</p>
+                                <h4>Pinkode</h4>
+                                <p>Din Maravelo har et fantastisk <span class="bold">sikkerhedssystem</span> med pinkode. Når el-cyklen slukkes låser systemet i neutralt gear og cyklen bliver dermed uanvendelig for andre end dens retmæssige ejer. <span class="bold">Nemt for dig</span>, svært for tyven.</p>
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6 col-12 mb-4">
                             <div id="kæde">
                                 <img src="img/ikoner/krank.png" alt="Ikon der illustrerer en cykelkæde" class="ikon">
-                                <h3>Usynlig kæde</h3>
-                                <p>Cykelkæden er ét af de vigtigste komponenter på en cykel. Derfor går vi op i at kæden
-                                    skal være så <span class="bold">optimal</span> som muligt. På en Maravelo el-cykel
-                                    er <span class="bold">kæden skjult og sikker</span>, hvilket gør den
-                                    vedligeholdelsesfri, da man undgår den beskidte kæde, der hele tiden skal holdes ved
-                                    lige.</p>
+                                <h4>Usynlig kæde</h4>
+                                <p>Cykelkæden er ét af de vigtigste komponenter på en cykel. Derfor går vi op i at kæden skal være så <span class="bold">optimal</span> som muligt. På en Maravelo el-cykel er <span class="bold">kæden skjult og sikker</span>, hvilket gør den vedligeholdelsesfri, da man undgår den beskidte kæde, der hele tiden skal holdes ved lige.</p>
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6 col-12 mb-4">
                             <div id="batteri">
                                 <img src="img/ikoner/battery.png" alt="Ikon der illustrerer et batteri" class="ikon">
-                                <h3>Batteri</h3>
-                                <p>Kør op til 90 km <span class="bold">uden at bekymre dig</span> om opladning af
-                                    batteriet – for det holder længe. Er du bekymret for at stå i en situation, hvor din
-                                    Maravelo er løbet tør, så har du mulighed for at tilkøbe et nyt batteri hos os. På
-                                    den måde har du <span class="bold">altid et fuldt opladt</span> batteri til
-                                    rådighed.</p>
+                                <h4>Batteri</h4>
+                                <p>Kør op til 90 km <span class="bold">uden at bekymre dig</span> om opladning af batteriet – for det holder længe. Er du bekymret for at stå i en situation, hvor din Maravelo er løbet tør, så har du mulighed for at tilkøbe et nyt batteri hos os. På den måde har du <span class="bold">altid et fuldt opladt</span> batteri til rådighed.</p>
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6 col-12 mb-4">
                             <div id="hjelm">
                                 <img src="img/ikoner/helmet.png" alt="Ikon der illustrerer en cykelhjelm" class="ikon">
-                                <h3>Smart-hjelm</h3>
-                                <p>Maravelo Smart hjelmen giver dig sikkerhed og den samme <span class="bold">digitale
-                                        komfort</span>, som du havde i bilen. Alle funktioner fra din smartphone flyttes
-                                    op i hjelmen, og <span class="bold">du styrer det hele</span> fra din controller på
-                                    styret. Hvis du falder, ringer den hjem.</p>
+                                <h4>Smart-hjelm</h4>
+                                <p>Maravelo Smart hjelmen giver dig sikkerhed og den samme <span class="bold">digitale komfort</span>, som du havde i bilen. Alle funktioner fra din smartphone flyttes op i hjelmen, og <span class="bold">du styrer det hele</span> fra din controller på styret. Hvis du falder, ringer den hjem.</p>
                             </div>
                         </div>
                     </div>
@@ -196,9 +172,11 @@
                         </a>
                     </div>
                     <div>
-                        <button type="button">
-                            <a href="https://maravelo.dk/shop">Bestil nu</a>
-                        </button>
+                        <a href="https://maravelo.dk/shop">
+                            <button type="button">
+                                Bestil nu
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -208,7 +186,7 @@
             <div class="container">
                 <div class="row justify-content-evenly">
                     <div class="col-12 text-center">
-                        <h1>Få et godt tilbud</h1>
+                        <h2>Få et godt tilbud</h2>
                     </div>
                     <div class="col-lg-6 mt-5">
                         <p>Bliv godt kørende allerede i dag!</p>
@@ -242,16 +220,15 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-xl-5 col-lg-6 mb-lg-3 mb-5">
                     <div id="om">
-                        <h1>Om Maravelo</h1>
+                        <h2>Om Maravelo</h2>
                         <h2>No chain, no pain</h2>
-                        <p>Maravelo el-cykler er skabt af folk fra motorsporten. Vi har en vision om at skabe et <span
-                                class="bold">electric powered prestigebrand</span> i krydsfeltet mellem en cykel og en
-                            bil. Vores mission er at vække cykelglæden i folk og hjælpe dem med at komme fra sted til
-                            sted med komfort og med et <span class="bold">smil på læben.</span></p>
-                        <p>Vores kunder skal have den bedste oplevelse uden diverse bekymringer og ekstra gebyrer. Glem
-                            alt om turen til cykelhandleren – <span class="bold">vi passer din Maravelo</span> for dig,
-                            og går den i stykker, bytter vi den til en ny.</p>
-                        <button type="button"><a href="https://maravelo.dk/wearemaravelo">Læs mere</a></button>
+                        <p>Maravelo el-cykler er skabt af folk fra motorsporten. Vi har en vision om at skabe et <span class="bold">electric powered prestigebrand</span> i krydsfeltet mellem en cykel og en bil. Vores mission er at vække cykelglæden i folk og hjælpe dem med at komme fra sted til sted med komfort og med et <span class="bold">smil på læben.</span></p>
+                        <p>Vores kunder skal have den bedste oplevelse uden diverse bekymringer og ekstra gebyrer. Glem alt om turen til cykelhandleren – <span class="bold">vi passer din Maravelo</span> for dig, og går den i stykker, bytter vi den til en ny.</p>
+                        <a href="https://maravelo.dk/wearemaravelo">
+                            <button type="button">
+                                Læs mere
+                            </button>
+                        </a>
                     </div>
 
                 </div>
@@ -273,7 +250,7 @@
                 </div>
                 <div class="col-md-6">
                     <div id="kontakt">
-                        <h1>Kontakt</h1>
+                        <h2>Kontakt</h2>
                         <p>Maravelo Hybrid Bicycle Club</p>
                         <address>
                             <!-- Der er ekstraordinært brugt br-tags for at udnytte designloven om nærhed og skabe bedre oveblik i kontakt-oplysninger -->
